--- a/simulator/core/config.json
+++ b/simulator/core/config.json
@@ -1,3 +1,6 @@
 {
-    "SECRET_KEY": "key"
+    "SECRET_KEY": "key",
+    "EMAIL_HOST": "HOST",
+    "EMAIL_HOST_USER": "host",
+    "EMAIL_HOST_PASSWORD": "password"
 }
