--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ pyenv
 __pycache__
 db.sqlite3
 media
-
+simulator/core/config.json
 # Backup files # 
 *.bak 
 
@@ -135,3 +135,5 @@ GitHub.sublime-settings
 !.vscode/launch.json 
 !.vscode/extensions.json 
 .history
+
+.vscode
