--- a/simulator/core/config.json
+++ b/simulator/core/config.json
@@ -1,6 +1,8 @@
 {
     "SECRET_KEY": "key",
-    "EMAIL_HOST": "HOST",
-    "EMAIL_HOST_USER": "host",
-    "EMAIL_HOST_PASSWORD": "password"
+    "EMAIL_HOST": "",
+    "EMAIL_HOST_USER": "",
+    "EMAIL_HOST_PASSWORD": "",
+    "FINNHUB_API_KEY" : "",
+    "FINHUB_SANDBOX_KEY" : ""
 }
